@@ -8,9 +8,9 @@
 #endif
 
 #define HB_VER_MAJOR    4        /* Major version number */
-#define HB_VER_MINOR    3        /* Minor version number */
-#define HB_VER_RELEASE  5        /* Release number */
+#define HB_VER_MINOR    4        /* Minor version number */
+#define HB_VER_RELEASE  0        /* Release number */
 #define HB_VER_STATUS   "hernad"    /* Build status (all lowercase) */
-#define __HARBOUR__     0x040305 /* Three bytes: Major + Minor + Release. This is recommented for 3rd party .c and .prg level code. */
+#define __HARBOUR__     0x040400 /* Three bytes: Major + Minor + Release. This is recommented for 3rd party .c and .prg level code. */
 
 #endif /* HB_VER_H_ */
